# csc575project

./: Cargo.toml  README.md  resources.md
Voice Modification/: voice_modification_project1.ipynb
rsvp/: .gitignore  README.md  analysis.py  app.py  cremad.sh  crossover.py  dataset.py  librispeech.sh  main.py  measure.py  mpl.py  pyproject.toml
src/: main.rs
